--- a/server/package.json
+++ b/server/package.json
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/simonlj8/vecko_poangen#readme",
   "dependencies": {
+    "axios": "^1.2.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "mongoose": "^6.9.0",
     "nodemon": "^2.0.20"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
