--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/simonlj8/vecko_poangen#readme",
   "dependencies": {
     "axios": "^1.2.6",
+    "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "mongoose": "^6.9.0",
